objects/Sowjanya1__c.object
<CustomObject>
    <fields>
        <fullName>Text10__c</fullName>
        <label>Text Field 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text1__c</fullName>
        <label>Text Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text2__c</fullName>
        <label>Text Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sowjanya1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Text1__c</columns>
        <columns>Text2__c</columns>
        <columns>Text3__c</columns>
        <columns>Text4__c</columns>
        <columns>Text5__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sowjanya1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sowjanya1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>validation</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(LOWER(Text6__c), &quot;global&quot;)</errorConditionFormula>
        <errorMessage>field contains the global values</errorMessage>
    </validationRules>
</CustomObject>